This commit will create the database to-do.db and add html for the add_to_list route.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <section>
-            <h1>To-Do List Tool</h1>
+            <a href="{{url_for('index')}}""><h1>To-Do List Tool</h1></a>
             <a href="{{url_for('add_to_list')}}" alt="Add to List">
             Add To List
         </a>
