This commit will display the list items on the showlist.html page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             Add To List
         </a>
         </section>
-        <a href="{{url_for('view_list')}}" alt="Add to List">
+        <a href="{{url_for('view_list')}}" alt="View List">
             View List
         </a>
     </body>
